# hacky

./: Cargo.toml
hacker/: Cargo.toml
hacker/src/: main.rs
payload/: Cargo.toml
payload/src/: lib.rs
